--- a/style.css
+++ b/style.css
@@ -1,2 +1,122 @@
 /* styles */
 
+body {
+    margin: 0px;
+    padding: 0px;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 200px;
+    background-color: #1F2937;
+    font-family: 'Roboto', sans-serif;
+    margin: 0px;
+    flex-wrap: nowrap;
+}
+
+.logo{
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.nav-links a{
+    color: #E5E7EB;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0px 10px;
+}
+
+.nav-links a:hover {
+    background-color: #34495e;
+    border-radius: 5px;
+}
+
+.body-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 0px;
+    padding: 60px;
+    padding-right: 120px;
+    padding-left: 200px;
+    background-color: #1F2937;
+    font-family: 'Roboto', sans-serif;
+    flex-wrap: nowrap;
+}
+
+.left-content {
+    flex: 1;
+}
+
+.big-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    min-width: 200px;
+}
+
+.small-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 10px 0;
+    min-width: 300px;
+}
+
+.body-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.right-content {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.car-image {
+    display: flex;
+    align-items: flex-end;
+    max-width: 500px;
+    padding-right: 90px;
+}
+
+.card-header {
+    text-align: center;
+    margin: 35px;
+    color: #1F2937;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 36px;
+}
+
+.image-gallery {
+    display: flex;
+    justify-content: space-around;
+}
+
+.image-card {
+    text-align: center;
+    margin: 15px;
+    flex: 1;
+    max-width: 25%;
+}
+
+.image-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.image-card div {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #F9FAF8;
+}
