--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 body {
     margin: 0px;
     padding: 0px;
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 .header {
     display: flex;
@@ -97,26 +100,99 @@ body {
     font-size: 36px;
 }
 
-.image-gallery {
+.image-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 70px;
+    margin-top: 50px;
 }
 
-.image-card {
+.card-images img{
+    width: 180px !important;
+    height: 180px !important;
+    object-fit: cover;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 15px;
+    border-color: #3882F6;
+}
+
+.card-images p {
+    display: flex;
+    justify-content: center;
     text-align: center;
-    margin: 15px;
-    flex: 1;
-    max-width: 25%;
+    flex-wrap: wrap;
+    width: 90%;
 }
 
-.image-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+.testimony {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    flex-direction: column;
+    padding-top: 130px;
 }
 
-.image-card div {
-    margin-top: 10px;
+.quote {
+    text-align: center;
+    width: 800px;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    text-align: left;
+    font-weight: 300;
+}
+
+.name {
+    width: 700px;
+    padding-top: 5px;
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+    padding-bottom: 100px;
+}
+
+.bottom-cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    margin: 100px auto;
+    width: 800px;
+    padding: 50px 70px;
+    border-radius: 15px;
+    gap: 150px;
+}
+
+.first-cta {
+    font-size: 22px;
+    color: white;
+}
+
+.second-cta {
     font-size: 18px;
-    color: #F9FAF8;
+    color: #d2d1d1;
+}
+
+.cta-button {
+    color: white;
+    background-color: #3882F6;
+    border-color: white;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1.5px;
+    font-size: 20px;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    color: #d2d1d1;
+    background-color: #1F2937;
+    padding: 40px;
+    font-size: 18px;
 }
